--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Template for Node applications with ES6",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "develop": "babel src -w -d dist"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,10 @@
   "homepage": "https://github.com/deltatre-webplu/nodejs-es6-template#readme",
   "dependencies": {},
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1"
   }
 }
