--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "develop": "babel src -w -d dist",
-    "test": "mocha --recursive --require babel-core/register ./test/"
+    "test": "mocha --recursive --require babel-core/register ./test/",
+    "start": "node dist/index"
   },
   "repository": {
     "type": "git",
@@ -31,5 +32,8 @@
     "chai": "^4.1.2",
     "eslint": "^4.19.1",
     "mocha": "^5.2.0"
+  },
+  "engines": {
+    "node": ">=6.9.1"
   }
 }
