--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,16 @@
 {
 	"presets": [
-	  ["env", {
-		"targets": {
-		  "node": "6.9.1"
-		}
-	  }]
+		[
+			"env",
+			{
+				"targets": {
+					"node": "6.9.1"
+				}
+			}
+		]
+	],
+	"plugins": [
+		"transform-es2015-destructuring",
+		"transform-object-rest-spread"
 	]
 }
